# MilkUI

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
examples/bottle_spa/: LICENSE  README.md  README.rst  pyproject.toml
examples/bottle_spa/src/: __init__.py  __main__.py  app.py
examples/bottle_spa/src/bottle_spa/: __main__.py  app.py
examples/bottle_spa/src/bottle_spa.dist-info/: METADATA
src/milkui/: __init__.py  __main__.py
src/milkui/interface/: app.py  cli.py  menu.py  process.py  utils.py
src/milkui/interface/api/: __init__.py  app.py  debug.py  dialog.py
src/milkui/resources/: invoke.js
