[metadata]
name = milkui
version = attr: src.milkui.__version__
url = https://github.com/Satireven/milkui
author = Veritas Raven
author_email = satireven@gmail.com
maintainer = Veritas Raven
maintainer_email = satireven@gmail.com
classifiers =
    Development Status :: 1 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independen
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Libraries
    Topic :: Application Frameworks

license = MIT
license_file = LICENSE
description = Build cross-platform desktop apps with Python and Web technologies.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    app
    gui
    web
    html
    javascript
    css
    toga
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
include_package_data = True
package_dir = = src
install_requires =
    toga >= 0.2.15
    briefcase >= 0.3.2
    gevent
    gevent-websocket
    rubicon-objc; sys_platform == "darwin"
    pyobjc; sys_platform == "darwin"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    milkui = milkui.interface.cli:main
milkui.platforms =
    android = milkui.platforms.android
    # django = milkui.platforms.django
    iOS = milkui.platforms.iOS
    linux = milkui.platforms.linux
    macOS = milkui.platforms.macOS
    # tvOS = milkui.platforms.tvOS
    # watchOS = milkui.platforms.watchOS
    # wearos = milkui.platforms.wearos
    windows = milkui.platforms.windows
milkui.formats.android =
    gradle = milkui.platforms.android.gradle
# milkui.formats.django =
#     project = milkui.platforms.django.project
#     app = milkui.platforms.django.app
milkui.formats.iOS =
    xcode = milkui.platforms.iOS.xcode
milkui.formats.linux =
    appimage = milkui.platforms.linux.appimage
    deb = milkui.platforms.linux.deb
    flatpak = milkui.platforms.linux.flatpak
    rpm = milkui.platforms.linux.rpm
    snap = milkui.platforms.linux.snap
milkui.formats.macOS =
    app = milkui.platforms.macOS.app
    dmg = milkui.platforms.macOS.dmg
    homebrew = milkui.platforms.macOS.homebrew
# milkui.formats.tvOS =
#     xcode = milkui.platforms.tvOS.xcode
# milkui.formats.watchOS =
#     xcode = milkui.platforms.watchOS.xcode
# milkui.formats.wearos =
#     gradle = milkui.platforms.wearos.gradle
milkui.formats.windows =
    msi = milkui.platforms.windows.msi

[tool:pytest]
testpaths = tests